tests/cli/snapshots/cli_tests__cli__snapshot_helpers__disable_command_help.snap
---
source: tests/cli/snapshot_helpers.rs
expression: normalized
---
Disable skills by ID

Usage: fastskill disable [SKILL_IDS]...

Arguments:
  [SKILL_IDS]...  Skill IDs to disable

Options:
  -h, --help  Print help

Examples:
  fastskill disable my-skill-id
