tests/cli/snapshots/cli_tests__cli__snapshot_helpers__eval_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Evaluation commands for skill quality assurance

Usage: fastskill eval [OPTIONS] <COMMAND>

Commands:
  validate   Validate eval configuration and files
  run        Run eval cases against an agent
  judge      Judge a completed eval run with the judges its checks file declares
  report     Show a report for a completed eval run
  score      Re-score saved eval artifacts without running the agent again
  scorecard  Fold many eval runs into named, gated metrics
  help       Print this message or the help of the given subcommand(s)

Options:
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --global                   Use global skills directory (~/.config/fastskill/skills)
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version
