tests/cli/snapshots/cli_tests__cli__snapshot_helpers__eval_report_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Show a report for a completed eval run

Usage: fastskill eval report [OPTIONS] --run-dir <run-dir>

Options:
      --run-dir <run-dir>        Path to the specific run directory
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --format <format>          Output format: table, json
      --global                   Use global skills directory (~/.config/fastskill/skills)
      --json                     Shorthand for --format json
  -v, --verbose                  Enable verbose output
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: eval report [OPTIONS]

Examples:
  fastskill eval report --run-dir ./eval-runs/2026-08-14T12-00-00Z/claude
