tests/cli/snapshots/cli_tests__cli__snapshot_helpers__eval_score_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Re-score saved eval artifacts without running the agent again

Usage: fastskill eval score [OPTIONS] --run-dir <run-dir>

Options:
      --run-dir <run-dir>        Path to the run directory to re-score
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --format <format>          Output format: table, json
      --global                   Use global skills directory (~/.config/fastskill/skills)
      --json                     Shorthand for --format json
  -v, --verbose                  Enable verbose output
      --no-fail                  Do not fail with non-zero exit code on suite failure
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: eval score [OPTIONS]

Examples:
  fastskill eval score --run-dir ./eval-runs/2026-08-14T12-00-00Z/claude
