tests/cli/snapshots/cli_tests__cli__snapshot_helpers__eval_validate_help.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Validate eval configuration and files

Usage: fastskill eval validate [OPTIONS]

Options:
  -a, --agent <agent>            Target runtime(s); repeatable (mutually exclusive with --all)
      --skills-dir <skills-dir>  Override the installation directory for this invocation
      --all                      Target all runtimes (mutually exclusive with --agent)
      --global                   Use global skills directory (~/.config/fastskill/skills)
      --model <model>            The model eval run will target; warns when a judge declares the
                                 same one
  -v, --verbose                  Enable verbose output
      --format <format>          Output format: table, json
      --json                     Shorthand for --format json
  -h, --help                     Print help
  -V, --version                  Print version

Syntax: eval validate [OPTIONS]

Examples:
  fastskill eval validate --all
