tests/cli/snapshots/cli_tests__cli__snapshot_helpers__help_flag.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
Usage: [FASTSKILL_BIN] <command> [arguments]

Skills and projects:
  skill    Discover, read, and manage individual skills
  bundle   Build and manage publishable skill bundles
  project  Initialize projects and install declared dependencies

Sources and distribution:
  repo         Manage repository list and browse remote skill catalog
  marketplace  Create and manage skill marketplace artifacts

Quality:
  analysis      Diagnostic and analysis commands
  eval          Evaluation commands for skill quality assurance
  optimization  Iterative skill-document optimization via text-gradient

Operations:
  index   Maintain the local search index
  cache   Inspect and reclaim the on-disk skill content cache
  server  Run the HTTP API server
  mcp     MCP server management
  cli     Diagnose and integrate the command-line interface

Options:
  --help, -h      Print this help message.
  --version, -V   Print version (fastskill [VERSION]).
  --skills-dir <skills-dir> Override the installation directory for this invocation
  --global        Use global skills directory (~/.config/fastskill/skills)
  --verbose, -v   Enable verbose output

Environment Variables:
  FASTSKILL_CACHE_DIR        Override the shared skill cache directory
  FASTSKILL_EMBEDDING_MODEL  Override the configured embedding model
  FASTSKILL_NO_PROGRESS      Disable progress indicators when set
  FORCE_COLOR                Force ANSI color output when supported
  NO_COLOR                   Disable ANSI color output
  OPENAI_API_KEY             API key for semantic search and embeddings
  OPENAI_BASE_URL            Override the embedding provider base URL
  PAT_TOKEN                  Default token for authenticated HTTP registries
  REGISTRY_INDEX_PATH        Override the local registry index path
  RUST_LOG                   Override the FastSkill logging filter
  XDG_CONFIG_HOME            Override the global configuration directory on Unix
