tests/cli/snapshots/cli_tests__cli__snapshot_helpers__init_with_metadata.snap
---
source: crates/fastskill-cli/../../tests/cli/snapshot_helpers.rs
assertion_line: 341
expression: normalized
---
fastskill skill initialization

[OK] Created skill-project.toml with version: [VERSION]

[INFO] This file contains author-provided metadata for your skill.
   It will be used by fastskill for version management.
